Resolve some lint issues

--- a/visualizations/analysis.html
+++ b/visualizations/analysis.html
@@ -12,33 +12,35 @@
     </style>
 </head>
 <body>
-    <h1>Property Data Analysis</h1>
+    <h1>North Willow Farms Sold Houses Analysis</h1>
+    <h2>2008-2024</h2>
+    <p>Total properties analyzed: 180</p>
     <div class="visualization">
-        <h2>1. Price Distribution since 2008</h2>
+        <h3>1. Price Distribution since June 2008</h3>
         <img src="price_distribution.png" alt="Price Distribution">
     </div>
     <div class="visualization">
-        <h2>2. Price Distribution since 2020</h2>
+        <h3>2. Price Distribution since January 2020</h3>
         <img src="price_distribution_2020.png" alt="Price Distribution">
     </div>
     <div class="visualization">
-        <h2>3. Number of Beds vs Price</h2>
+        <h3>3. Number of Beds vs Price</h3>
         <img src="beds_vs_price.png" alt="Number of Beds vs Price">
     </div>
     <div class="visualization">
-        <h2>4. Square Footage vs Price</h2>
+        <h3>4. Square Footage vs Price</h3>
         <img src="sqft_vs_price.png" alt="Square Footage vs Price">
     </div>
     <div class="visualization">
-        <h2>5. Lot Size Distribution</h2>
+        <h3>5. Lot Size Distribution</h3>
         <img src="lot_size_distribution.png" alt="Lot Size Distribution">
     </div>
     <div class="visualization">
-        <h2>6. Sale Price Trends Over Time</h2>
+        <h3>6. Sale Price Trends Over Time</h3>
         <img src="sale_trends.png" alt="Sale Price Trends Over Time">
     </div>
     <div class="visualization">
-        <h2>7. Correlation Matrix</h2>
+        <h3>7. Correlation Matrix</h3>
         <img src="correlation_matrix.png" alt="Correlation Matrix">
     </div>
 </body>
